--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/wallet.svg" />
+    <link rel="apple-touch-icon" href="/icons/wallet-192x192.png" />
+    <link rel="manifest" href="/wallet.webmanifest" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"
+      content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no,sviewport-fit=cover"
     />
     <meta name="HandheldFriendly" content="true" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="theme-color" content="#fff" />
     <title>Wallet</title>
-    <link rel="manifest" href="/wallet.webmanifest" />
   </head>
   <body>
     <div id="app"></div>
